fixed captions alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,10 @@
     text-align: center;
 }
 
+#portfolio{
+    margin-top:3%;
+    padding-bottom:5vh;
+}
 
 #portfolio, #contact{
     width: 100vw;
@@ -38,15 +42,16 @@
 
 #portfolio > .row >.col{
     padding: 3%;
+    /* align-items: center; */
 }
 
-#portfolio > .row > .col> img, #shoes-img{
+/* #portfolio > .row > .col> img, #shoes-img{
     width:300px;
     max-height: 300px;
     border-radius: 10%;
     object-fit: cover;
     object-position: 100% ;
-}
+} */
 
 #about, #contact {
     padding: 3% 10% 3% 10%;
@@ -116,4 +121,42 @@ footer{
 
 .navbar{
     background-color: white;
+}
+
+.image-container {
+    width:100%;
+    border-radius: 10px;
+    object-fit: cover;
+    object-position: 100% ;
+    max-height: 300px;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+  
+  .figure-caption {
+    position: absolute;
+    bottom:0;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    opacity: 0;
+    transition: opacity 0.2s;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  
+  .figure:hover .figure-caption {
+    opacity: 1;
+  }
+  
+h3{
+    font-size: x-large;
+    letter-spacing: 0.1em;
 }
